# forgeclaw

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  start.sh
examples/: simple_workflow.yaml
src/forgeclaw/: __init__.py  cli.py  logging_config.py
src/forgeclaw/api/: __init__.py  main.py
src/forgeclaw/api/routes/: assets.py  executions.py  memory.py  planner.py  scheduler.py  skills.py  workflows.py
src/forgeclaw/assets/: __init__.py  asset_manager.py  models.py
src/forgeclaw/engine/: __init__.py  executor.py  state.py
src/forgeclaw/memory/: __init__.py  memory_service.py  models.py
src/forgeclaw/models/: __init__.py  execution.py  workflow.py
src/forgeclaw/planner/: __init__.py  models.py  planner.py  prompts.py
src/forgeclaw/scheduler/: __init__.py  models.py  scheduler.py
src/forgeclaw/skills/: __init__.py  base.py  registry.py
src/forgeclaw/skills/builtin/: __init__.py  code.py  http.py  template.py
tests/: __init__.py  conftest.py  run_bootstrap.sh  run_tests.sh  test_api_integration.py  test_bootstrap.py  verify_endpoints.py
tests/unit/: test_executor.py  test_workflow.py
web/: index.html  package-lock.json  package.json
web/src/: index.css  main.tsx
web/src/api/: client.ts
web/src/components/: Header.tsx  Layout.tsx  NodeConfigPanel.tsx  Sidebar.tsx  SkillPalette.tsx
web/src/pages/: AssetManager.tsx  ExecutionMonitor.tsx  Planner.tsx  Scheduler.tsx  WorkflowEditor.tsx  WorkflowList.tsx
web/src/types/: index.ts
